--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
       <input type="text" id="username" name="username" required>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
-      <button type="submit" id="submit-btn">Sign Up / Login</button>
+      <button type="submit" id="submit-btn">Login</button>
     </form>
     <p id="message"></p>
   </div>
